# System_Orin_NX

./: 99-uvc-camera.rules  LICENSE  README.md  install_opencv4.9.0_Jetson.sh
cuda-samples/Samples/1_Utilities/deviceQuery/: Makefile  deviceQuery
face_detection/: package.xml  setup.cfg  setup.py
face_detection/face_detection/: Yunet_Detection.py  facefollow_ctrl.py
face_detection/launch/: face_detection.launch.py  facefollow_ctrl.launch.py
tegrastats-utils/: readme.md  system_deps.txt  tegrastats2.py  visualize.py
test_cudnn/: test_cudnn  test_cudnn.cpp
test_opencv/: CMakeLists.txt  test_opencv.cpp
test_tensorRT/: CMakeLists.txt  test_tensorRT.cpp
